# shell-cpp

./: .clang-format  CMakeLists.txt  README.md
src/: Trie.h  main.cpp  shell_commands.cpp  shell_commands.h  shell_executor.cpp  shell_executor.h  shell_parser.cpp  shell_parser.h  user_input.cpp  user_input.h
